--- a/calculator.html
+++ b/calculator.html
@@ -12,9 +12,9 @@
     <meta name="twitter:title" content="MathFlare - Scientific Calculator" />
     <meta name="keywords"
         content="calculator, scientific calculator, substraction, multiplication, division, addition, powers, square root, math, mathflare, math flare">
-    <meta name="description" content="Fully functional simple calculator" />
-    <meta name="og:description" content="Fully functional simple calculator" />
-    <meta name="twitter:description" content="Fully functional simple calculator" />
+    <meta name="description" content="Fully functional scientific calculator" />
+    <meta name="og:description" content="Fully functional scientific calculator" />
+    <meta name="twitter:description" content="Fully functional scientific calculator" />
     <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/calculator" />
     <link rel="canonical" href="https://www.mathflare.xyz/calculator">
