--- a/calculator.html
+++ b/calculator.html
@@ -48,6 +48,22 @@
         .w-20 {
             width: 20% !important;
         }
+
+        .w-25 {
+            width: calc(100% / 4) !important;
+        }
+
+        .w-50 {
+            width: calc(100% / 2) !important;
+        }
+
+        .w-33 {
+            width: calc(100% / 3) !important;
+        }
+
+        button {
+            margin: 0px !important;
+        }
     </style>
 </head>
 
@@ -74,23 +90,26 @@
                             <span class="input-group-text">result</span>
                             <input type="text" id="result" class="form-control input-group-item" placeholder="result"
                                 disabled readonly>
+                            <button type="button" class="btn btn-outline-light" id="copy-res">Copy Result</button>
                         </div>
                     </div>
                     <br />
-                    <div class="input-group w-100">
-                        <button type="submit" class="btn btn-success input-group-item w-50"
-                            id="evaluate">Calculate</button>
-                        <button type="button" class="btn btn-danger input-group-item w-50" id="clear">CE</button>
-                    </div>
-                    <br />
                     <div class="input-group w-100 mb-3">
-                        <button type="button" class="btn btn-outline-info w-25" data-digit="+" id="operant">Add
+                        <button type="submit" class="btn btn-outline-success input-group-item w-33"
+                            id="evaluate">Calculate =</button>
+                        <button type="button" class="btn btn-outline-secondary input-group-item w-33"
+                            id="ans">Ans</button>
+                        <button type="button" class="btn btn-outline-danger input-group-item w-33"
+                            id="clear">CE</button>
+                    </div>
+                    <div class="input-group w-100 mb-3">
+                        <button type="button" class="btn btn-outline-warning w-25" data-digit="+" id="operant">Add
                             &#43;</button>
-                        <button type="button" class="btn btn-outline-info w-25" data-digit="-" id="operant">Subtract
+                        <button type="button" class="btn btn-outline-warning w-25" data-digit="-" id="operant">Sub
                             &#8722;</button>
-                        <button type="button" class="btn btn-outline-info w-25" data-digit="*" id="operant">Multiply
+                        <button type="button" class="btn btn-outline-warning w-25" data-digit="×" id="operant">Mult
                             &#215;</button>
-                        <button type="button" class="btn btn-outline-info w-25" data-digit="/" id="operant">Divide
+                        <button type="button" class="btn btn-outline-warning w-25" data-digit="÷" id="operant">Div
                             &#247;</button>
                     </div>
                     <div class="input-group w-100">
@@ -113,35 +132,47 @@
                         <button type="button" class="btn btn-outline-info w-25" data-digit="9" id="operant"
                             style="border-top-left-radius: 0px;">9</button>
                         <button type="button" class="btn btn-outline-info w-25" data-digit="0" id="operant">0</button>
-                        <button type="button" class="btn btn-outline-info w-25" data-digit="00" id="operant">00</button>
+                        <button type="button" class="btn btn-outline-info w-25" data-digit="-" id="operant">-</button>
                         <button type="button" class="btn btn-outline-info w-25" data-digit="." id="operant"
                             style="border-top-right-radius: 0px;">.</button>
                     </div>
-                    <div class="input-group w-100 my-3">
-                        <button type="button" class="btn btn-outline-info w-25" data-digit="sin()"
-                            id="operant">sin</button>
-                        <button type="button" class="btn btn-outline-info w-25" data-digit="cos()"
+                    <div class="input-group w-100 mt-3">
+                        <button type="button" class="btn btn-outline-warning w-25" data-digit="sin()" id="operant"
+                            style="border-bottom-left-radius: 0px;">sin</button>
+                        <button type="button" class="btn btn-outline-warning w-25" data-digit="cos()"
                             id="operant">cos</button>
-                        <button type="button" class="btn btn-outline-info w-25" data-digit="tan()"
+                        <button type="button" class="btn btn-outline-warning w-25" data-digit="tan()"
                             id="operant">tan</button>
-                        <button type="button" class="btn btn-outline-info w-25" data-digit="log()"
-                            id="operant">log</button>
+                        <button type="button" class="btn btn-outline-warning w-25" data-digit="log()" id="operant"
+                            style="border-bottom-right-radius: 0px;">log</button>
                     </div>
                     <div class="input-group w-100">
-                        <button type="button" class="btn btn-outline-info w-50" data-digit="sqrt()" id="operant"
-                            style="border-bottom-left-radius: 0px;">sqrt</button>
-                        <button type="button" class="btn btn-outline-info w-50" data-digit="pow(x , y)" id="operant"
-                            style="border-bottom-right-radius: 0px;">pow x<sup>y</sup></button>
+                        <button type="button" class="btn btn-outline-warning w-33" data-digit="sqrt()" id="operant"
+                            style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;">sqrt</button>
+                        <button type="button" class="btn btn-outline-warning w-33" data-digit="x^y" id="operant"
+                            style="border-bottom-right-radius: 0px; border-top-right-radius: 0px; margin-right: 0px !important">
+                            x<sup>y</sup></button>
+                        <button type="button" class="btn btn-outline-warning w-33" data-digit="hyp(x,y)" id="operant"
+                            style="border-bottom-right-radius: 0px; border-top-right-radius: 0px; margin-right: 0px !important">hyp</button>
                     </div>
                     <div class="input-group w-100">
-                        <button type="button" class="btn btn-outline-info w-50" data-digit="(" id="operant"
+                        <button type="button" class="btn btn-outline-warning w-50" data-digit="π" id="operant"
+                            style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;">π</button>
+                        <button type="button" class="btn btn-outline-warning w-50" data-digit="e" id="operant"
+                            style="border-bottom-right-radius: 0px; border-top-right-radius: 0px; margin-right: 0px !important">e</button>
+                    </div>
+                    <div class="input-group w-100">
+                        <button type="button" class="btn btn-outline-warning w-50" data-digit="(" id="operant"
                             style="border-top-left-radius: 0px;">(</button>
-                        <button type="button" class="btn btn-outline-info w-50" data-digit=")" id="operant"
+                        <button type="button" class="btn btn-outline-warning w-50" data-digit=")" id="operant"
                             style="border-top-right-radius: 0px;">)</button>
                     </div>
                 </div>
             </form>
         </div>
+        <p class="mx-4"><i class="bi bi-chat-left-dots"></i> Feedback wanted! Please <a href="contact.html">use our
+                contact form</a> or open a <a href="https://github.com/mathflare/mathflare/issues">GitHub issue</a> to
+            give us some feedback on our shiny new scientific calculator</p>
     </div>
     <!-- SCRIPTS START -->
     <script src="dist/scicalc.js"></script>
