fix: fixed scientific calc

--- a/calculator.html
+++ b/calculator.html
@@ -33,7 +33,7 @@
     <link rel="icon" type="image/png" href="Assets/android-chrome-512x512.png" sizes=512x512>
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
     <!-- SCRIPTS -->
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es2021"></script>
     <script src="dist/jquery.min.js" defer></script>
     <script src="dist/bootstrap.min.js" defer></script>
     <script src="dist/navbar.js" defer></script>
@@ -156,8 +156,8 @@
                             style="border-bottom-right-radius: 0px; border-top-right-radius: 0px; margin-right: 0px !important">hyp</button>
                     </div>
                     <div class="input-group w-100">
-                        <button type="button" class="btn btn-outline-warning w-50" data-digit="π" id="operant"
-                            style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;">π</button>
+                        <button type="button" class="btn btn-outline-warning w-50" data-digit="pi" id="operant"
+                            style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;">pi</button>
                         <button type="button" class="btn btn-outline-warning w-50" data-digit="e" id="operant"
                             style="border-bottom-right-radius: 0px; border-top-right-radius: 0px; margin-right: 0px !important">e</button>
                     </div>
