fix: fixed scientific calc

--- a/calculator.html
+++ b/calculator.html
@@ -103,14 +103,16 @@
                             id="clear">CE</button>
                     </div>
                     <div class="input-group w-100 mb-3">
-                        <button type="button" class="btn btn-outline-warning w-25" data-digit="+" id="operant">Add
+                        <button type="button" class="btn btn-outline-warning w-20" data-digit="+" id="operant">Add
                             &#43;</button>
-                        <button type="button" class="btn btn-outline-warning w-25" data-digit="-" id="operant">Sub
+                        <button type="button" class="btn btn-outline-warning w-20" data-digit="-" id="operant">Sub
                             &#8722;</button>
-                        <button type="button" class="btn btn-outline-warning w-25" data-digit="×" id="operant">Mult
+                        <button type="button" class="btn btn-outline-warning w-20" data-digit="×" id="operant">Mult
                             &#215;</button>
-                        <button type="button" class="btn btn-outline-warning w-25" data-digit="÷" id="operant">Div
+                        <button type="button" class="btn btn-outline-warning w-20" data-digit="÷" id="operant">Div
                             &#247;</button>
+                        <button type="button" class="btn btn-outline-warning w-20" data-digit="%"
+                            id="operant">%</button>
                     </div>
                     <div class="input-group w-100">
                         <button type="button" class="btn btn-outline-info w-25" data-digit="1" id="operant"
@@ -137,23 +139,25 @@
                             style="border-top-right-radius: 0px;">.</button>
                     </div>
                     <div class="input-group w-100 mt-3">
-                        <button type="button" class="btn btn-outline-warning w-25" data-digit="sin()" id="operant"
-                            style="border-bottom-left-radius: 0px;">sin</button>
-                        <button type="button" class="btn btn-outline-warning w-25" data-digit="cos()"
-                            id="operant">cos</button>
-                        <button type="button" class="btn btn-outline-warning w-25" data-digit="tan()"
-                            id="operant">tan</button>
-                        <button type="button" class="btn btn-outline-warning w-25" data-digit="log()" id="operant"
-                            style="border-bottom-right-radius: 0px;">log</button>
+                        <button type="button" class="btn btn-outline-warning w-25" data-digit="sin(x)" id="operant"
+                            style="border-bottom-left-radius: 0px;">sin(x)</button>
+                        <button type="button" class="btn btn-outline-warning w-25" data-digit="cos(x)"
+                            id="operant">cos(x)</button>
+                        <button type="button" class="btn btn-outline-warning w-25" data-digit="tan(x)"
+                            id="operant">tan(x)</button>
+                        <button type="button" class="btn btn-outline-warning w-25" data-digit="log(x)" id="operant"
+                            style="border-bottom-right-radius: 0px;">log(x)</button>
                     </div>
                     <div class="input-group w-100">
-                        <button type="button" class="btn btn-outline-warning w-33" data-digit="sqrt()" id="operant"
-                            style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;">sqrt</button>
-                        <button type="button" class="btn btn-outline-warning w-33" data-digit="x^y" id="operant"
+                        <button type="button" class="btn btn-outline-warning w-25" data-digit="sqrt(x)" id="operant"
+                            style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;">sqrt(x)</button>
+                        <button type="button" class="btn btn-outline-warning w-25" data-digit="x^y" id="operant"
                             style="border-bottom-right-radius: 0px; border-top-right-radius: 0px; margin-right: 0px !important">
                             x<sup>y</sup></button>
-                        <button type="button" class="btn btn-outline-warning w-33" data-digit="hyp(x,y)" id="operant"
-                            style="border-bottom-right-radius: 0px; border-top-right-radius: 0px; margin-right: 0px !important">hyp</button>
+                        <button type="button" class="btn btn-outline-warning w-25" data-digit="hyp(x,y)"
+                            id="operant">hyp</button>
+                        <button type="button" class="btn btn-outline-warning w-25" data-digit="abs(x)" id="operant"
+                            style="border-bottom-right-radius: 0px; border-top-right-radius: 0px; margin-right: 0px !important">abs(x)</button>
                     </div>
                     <div class="input-group w-100">
                         <button type="button" class="btn btn-outline-warning w-50" data-digit="pi" id="operant"
