refactor: light refactoring

--- a/fractionreduction.html
+++ b/fractionreduction.html
@@ -77,8 +77,8 @@
         <br />
     </div>
     <!-- SCRIPTS START -->
-    
-    <script src="dist/fract-reduction.js"></script>
+
+    <script src="dist/fractionreduction.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
