refactor: light refactoring

--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="dead-center">
-        <h1 class="text-white">Oops!</h1>
+        <h1 class="text-white px-4">Oops!</h1>
         <div class="m-4">
             <img src="./Assets/404.svg" alt="404 error not found" class="img-fluid" width="400vh" />
         </div>
