--- a/calculator.html
+++ b/calculator.html
@@ -72,7 +72,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Scientific Calculator</h1>
+        <h1 class="text-white px-4">Scientific Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <div class="mathcontainer mb-5">
             <form autocomplete="off">
