--- a/complementaryrna.html
+++ b/complementaryrna.html
@@ -46,7 +46,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">RNA Complement Generator</h1>
+        <h1 class="text-white px-4">RNA Complement Generator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <div class="center-form">
