--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Contact MathFlare</h1>
+        <h1 class="text-white px-4">Contact MathFlare</h1>
         <hr class="bg-danger" style="width: 60%; margin: auto;" />
         <form id="contact-form" autocomplete="on">
             <p class=" text-white"><i class="bi bi-lightbulb"></i> Tip: Include your name in the subject of the email
