--- a/equations.html
+++ b/equations.html
@@ -46,7 +46,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">First Degree Equations</h1>
+        <h1 class="text-white px-4">First Degree Equations</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <!-- X + Y = Z START -->
         <form autocomplete="off">
