--- a/fractionreduction.html
+++ b/fractionreduction.html
@@ -46,7 +46,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Fraction Reduction Calcualtor</h1>
+        <h1 class="text-white px-4">Fraction Reduction Calcualtor</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h2 class="text-white"><sup>x</sup>&frasl;<sub>y</sub></h2>
