--- a/lcm.html
+++ b/lcm.html
@@ -46,7 +46,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Least Common Multiple Calculator</h1>
+        <h1 class="text-white px-4">Least Common Multiple Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h4 class="text-white">Enter the first number</h4>
