--- a/logar.html
+++ b/logar.html
@@ -45,7 +45,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Logarithms</h1>
+        <h1 class="text-white px-4">Logarithms</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h4 class="text-white">Enter the number</h4>
