--- a/subatomicparticles.html
+++ b/subatomicparticles.html
@@ -6,12 +6,11 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MathFlare - Atomic-Mass number to number of Subatomic Particles</title>
-    <meta name="title" content="MathFlare - Atomic-Mass number to number of Subatomic Particles">
-    <meta name="og:title" content="MathFlare - Atomic-Mass number to number of Subatomic Particles" />
-    <meta name="twitter:title" content="MathFlare - Atomic-Mass number to number of Subatomic Particles" />
-    <meta name="keywords"
-        content="atomic-mass number, subatomic particles, particles, chemistry, mathflare, math flare">
+    <title>MathFlare - Atomic/Mass number to number of Subatomic Particles</title>
+    <meta name="title" content="MathFlare - Atomic/Mass number to number of Subatomic Particles">
+    <meta name="og:title" content="MathFlare - Atomic/Mass number to number of Subatomic Particles" />
+    <meta name="twitter:title" content="MathFlare - Atomic/Mass number to number of Subatomic Particles" />
+    <meta name="keywords" content="atomic number, mass number, subatomic particles, chemistry, mathflare, math flare">
     <meta name="description" content="Calculate number of subatomic particles" />
     <meta name="og:description" content="Calculate number of subatomic particles" />
     <meta name="twitter:description" content="Calculate number of subatomic particles" />
@@ -60,7 +59,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Atomic-Mass number to number of Subatomic Particles</h1>
+        <h1 class="text-white px-4">Atomic/Mass number to number of Subatomic Particles</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h4 class="nobr mb-3"><span class="supsub text-warning">x<br />y</span>V</h4>
