--- a/acidcarbonatereaction.html
+++ b/acidcarbonatereaction.html
@@ -46,7 +46,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Acid-Carbonate Reaction Calculator</h1>
+        <h1 class="text-white px-4">Acid-Carbonate Reaction Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h4 class="text-white"><span class="text-warning">X</span><sub class="text-white">2</sub><span
