--- a/acidmetalreaction.html
+++ b/acidmetalreaction.html
@@ -45,7 +45,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Acid-Metal Reaction Calculator</h1>
+        <h1 class="text-white px-4">Acid-Metal Reaction Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h4 class="text-white">H<sub class="text-warning">x</sub><span class="text-warning">Y</span> + <span
