--- a/avg.html
+++ b/avg.html
@@ -47,7 +47,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Average Calculator</h1>
+        <h1 class="text-white px-4">Average Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h4 class="text-white">Enter the numbers in the correct format</h4>
