--- a/clenght.html
+++ b/clenght.html
@@ -46,7 +46,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center mb-5">
-        <h1 class="text-white">Length Converter</h1>
+        <h1 class="text-white px-4">Length Converter</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h4 class="text-white">Feet</h4>
