--- a/ctemp.html
+++ b/ctemp.html
@@ -46,7 +46,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center mb-5">
-        <h1 class="text-white title">Temperature Converter</h1>
+        <h1 class="text-white px-4 title">Temperature Converter</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h4 class="text-white m-2">Fahrenheit</h4>
