--- a/cweight.html
+++ b/cweight.html
@@ -45,7 +45,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center mb-5">
-        <h1 class="text-white title">Weight Converter</h1>
+        <h1 class="text-white px-4 title">Weight Converter</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h4 class="text-white">Pounds</h4>
