--- a/diagpolyg.html
+++ b/diagpolyg.html
@@ -48,7 +48,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Diagonals</h1>
+        <h1 class="text-white px-4">Diagonals</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h4 class="text-white">Square</h4>
