--- a/displacement.html
+++ b/displacement.html
@@ -48,7 +48,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Displacement; Δx &#61; v &#215; Δt</h1>
+        <h1 class="text-white px-4">Displacement; Δx &#61; v &#215; Δt</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h3>Δx</h3>
