--- a/handshake.html
+++ b/handshake.html
@@ -48,7 +48,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Number of Handshakes at Party Calculator</h1>
+        <h1 class="text-white px-4">Number of Handshakes at Party Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h4 class="text-white">Enter the number of visitors</h4>
