--- a/imperfcarboncombust.html
+++ b/imperfcarboncombust.html
@@ -46,7 +46,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Incomplete Hydrocarbon Combustion</h1>
+        <h1 class="text-white px-4">Incomplete Hydrocarbon Combustion</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h4 class="text-white">Choose the combustion's product</h4>
