--- a/inequalities.html
+++ b/inequalities.html
@@ -46,7 +46,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">First Degree Inequalities</h1>
+        <h1 class="text-white px-4">First Degree Inequalities</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <!-- ax+c>0 START -->
         <form autocomplete="off">
