--- a/inorganiccomp.html
+++ b/inorganiccomp.html
@@ -45,7 +45,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Inorganic Compound Calculator</h1>
+        <h1 class="text-white px-4">Inorganic Compound Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h4 class="text-white">X<sup class="text-warning">+z</sup><span class="text-warning"> + </span>Y<sup
