--- a/likefractions.html
+++ b/likefractions.html
@@ -46,7 +46,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Unlike to Like Fraction Converter</h1>
+        <h1 class="text-white px-4">Unlike to Like Fraction Converter</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h4 class="text-white"><sup>x</sup><span class="text-warning">&frasl;</span><sub>y</sub> <sup>a</sup><span
