--- a/linear-systems.html
+++ b/linear-systems.html
@@ -47,7 +47,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Linear 2x2 Systems; \(ax + by = c\)</h1>
+        <h1 class="text-white px-4">Linear 2x2 Systems; \(ax + by = c\)</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h3 class="text-white">First Equation:</h3>
