--- a/neutralization.html
+++ b/neutralization.html
@@ -46,7 +46,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Neutralization Reaction Calculator</h1>
+        <h1 class="text-white px-4">Neutralization Reaction Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h4 class="text-white">H<sub class="text-warning">x</sub><span class="text-warning">Y</span> + <span
