--- a/numberpairs.html
+++ b/numberpairs.html
@@ -46,7 +46,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Number of Pairs Calculator</h1>
+        <h1 class="text-white px-4">Number of Pairs Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h4 class="text-white">Enter how many numbers you have</h4>
