--- a/percent.html
+++ b/percent.html
@@ -46,7 +46,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Percentages</h1>
+        <h1 class="text-white px-4">Percentages</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h4 class="text-white">Fraction to Percentage <sup>X</sup>&frasl;<sub>Y</sub></h4>
