--- a/phypotenuse.html
+++ b/phypotenuse.html
@@ -46,7 +46,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Hypotenuse</h1>
+        <h1 class="text-white px-4">Hypotenuse</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h4 class="text-white">Enter the right triangle's first leg</h4>
