--- a/punnettsquare.html
+++ b/punnettsquare.html
@@ -45,7 +45,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Punnett Square</h1>
+        <h1 class="text-white px-4">Punnett Square</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h4 class="text-white">Father's genotype</h4>
