--- a/roots.html
+++ b/roots.html
@@ -46,7 +46,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Root Calculator</h1>
+        <h1 class="text-white px-4">Root Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h3 class="text-white">Square Root</h3>
