--- a/round.html
+++ b/round.html
@@ -45,7 +45,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Round Numbers</h1>
+        <h1 class="text-white px-4">Round Numbers</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <div class=" center-form">
