--- a/slope.html
+++ b/slope.html
@@ -45,7 +45,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Slope</h1>
+        <h1 class="text-white px-4">Slope</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h3>First Point</h3>
