prod: added more calcs and chemistry refact

--- a/acidcarbonatereaction.html
+++ b/acidcarbonatereaction.html
@@ -56,8 +56,8 @@
             <div class="center-form">
                 <div class="input-group">
                     <span class="input-group-text">metal</span>
-                    <input type="text" id="x" placeholder="X" class="form-control input-group-item" step="0.1" />
-                    <input type="number" id="v" placeholder="v" class="form-control input-group-item" step="0.1" />
+                    <input type="text" id="x" placeholder="X" class="form-control input-group-item" />
+                    <input type="number" id="z" placeholder="z" class="form-control input-group-item" step="0.1" />
                     <span class="input-group-text">index</span>
                 </div>
             </div>
@@ -65,8 +65,8 @@
             <div class="center-form">
                 <div class="input-group">
                     <span class="input-group-text">index</span>
-                    <input type="number" id="z" placeholder="z" class="form-control input-group-item" step="0.1" />
-                    <input type="text" id="y" placeholder="Y" class="form-control input-group-item" step="0.1" />
+                    <input type="number" id="v" placeholder="v" class="form-control input-group-item" step="0.1" />
+                    <input type="text" id="y" placeholder="Y" class="form-control input-group-item" />
                     <span class="input-group-text">non-metal</span>
                 </div>
             </div>
