--- a/neutralization.html
+++ b/neutralization.html
@@ -55,15 +55,15 @@
                 <div class="input-group">
                     <span class="input-group-text">index</span>
                     <input type="number" id="x" placeholder="x" class="form-control input-group-item" step="0.1" />
-                    <input type="text" id="w" placeholder="W" class="form-control input-group-item" step="0.1" />
-                    <span class="input-group-text">metal</span>
+                    <input type="text" id="y" placeholder="Y" class="form-control input-group-item" />
+                    <span class="input-group-text">non-metal</span>
                 </div>
             </div>
             <br />
             <div class="center-form">
                 <div class="input-group">
-                    <span class="input-group-text">non-metal</span>
-                    <input type="text" id="y" placeholder="Y" class="form-control input-group-item" step="0.1" />
+                    <span class="input-group-text">metal</span>
+                    <input type="text" id="w" placeholder="W" class="form-control input-group-item" />
                     <input type="number" id="m" placeholder="m" class="form-control input-group-item" step="0.1" />
                     <span class="input-group-text">index</span>
                 </div>
