--- a/inorganiccomp.html
+++ b/inorganiccomp.html
@@ -53,18 +53,18 @@
             <div class="center-form">
                 <div class="input-group">
                     <span class="input-group-text">metal</span>
-                    <input type="text" id="x" placeholder="X" class="form-control input-group-item" step="0.1" />
-                    <input type="text" id="y" placeholder="Y" class="form-control input-group-item" step="0.1" />
-                    <span class="input-group-text">non-metal</span>
+                    <input type="text" id="x" placeholder="X" class="form-control input-group-item" />
+                    <input type="number" id="z" placeholder="z" class="form-control input-group-item" step="0.1" />
+                    <span class="input-group-text">oxidation number</span>
                 </div>
             </div>
             <br />
             <div class="center-form">
                 <div class="input-group">
-                    <span class="input-group-text">index</span>
-                    <input type="number" id="z" placeholder="z" class="form-control input-group-item" step="0.1" />
+                    <span class="input-group-text">non-metal</span>
+                    <input type="text" id="y" placeholder="Y" class="form-control input-group-item" />            
                     <input type="number" id="v" placeholder="v" class="form-control input-group-item" step="0.1" />
-                    <span class="input-group-text">index</span>
+                    <span class="input-group-text">oxidation number</span>
                 </div>
             </div>
             <br />
