beta: google adsense

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     <script src="dist/common.js" defer></script>
     <script src="dist/main.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/party-js@latest/bundle/party.min.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5074915944414606"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
