--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
             slogan.innerText = (slogans[Math.floor(Math.random() * slogans.length)]).toLowerCase();
         })
     </script>
+    <script src="dist/proteintranslation.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
 </body>
 
